# PermanentSet

./: CMakeLists.txt  README.md
.github/workflows/: workflow.yml
inc/: permanent_set.hpp  test
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp  test_generate.py
tests/in/: 1test.in  2test.in  3test.in  4test.in  5test.in  6test.in  7test.in
